// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`style-converter/convertReactNativeStyle fontFamily "Noto, BlinkMacSystemFont" 1`] = `
Object {
  "font-family": "Noto,BlinkMacSystemFont",
}
`;

exports[`style-converter/convertReactNativeStyle fontFamily "Noto, System" 1`] = `
Object {
  "font-family": "Noto,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,Ubuntu,\\"Helvetica Neue\\",sans-serif",
}
`;

exports[`style-converter/convertReactNativeStyle fontFamily "Noto, System" 2`] = `
Object {
  "font": "14px Noto, system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,Ubuntu,\\"Helvetica Neue\\",sans-serif",
}
`;

exports[`style-converter/convertReactNativeStyle fontFamily "System" 1`] = `
Object {
  "font-family": "system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,Ubuntu,\\"Helvetica Neue\\",sans-serif",
}
`;

exports[`style-converter/convertReactNativeStyle fontFamily "System" 2`] = `
Object {
  "font": "14px system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,Ubuntu,\\"Helvetica Neue\\",sans-serif",
}
`;

exports[`style-converter/convertReactNativeStyle fontFamily "monospace" 1`] = `
Object {
  "font-family": "monospace,monospace",
}
`;

exports[`style-converter/convertReactNativeStyle fontFamily general case 1`] = `
Object {
  "font-family": "Georgia, Times, serif",
}
`;

exports[`style-converter/convertReactNativeStyle shortform -> longform 1`] = `
Object {
  "border-bottom-color": "rgba(255,255,255,1.00)",
  "border-bottom-style": "solid",
  "border-bottom-width": "1px",
  "border-left-style": "solid",
  "border-left-width": "0px",
  "border-right-style": "solid",
  "border-right-width": "0px",
  "border-top-style": "solid",
  "border-top-width": "0px",
  "box-sizing": "border-box",
  "overflow-x": "hidden",
  "overflow-y": "hidden",
  "overscroll-behavior-x": "contain",
  "overscroll-behavior-y": "contain",
}
`;
